--- a/app/src/main/res/drawable/ticket_background.xml
+++ b/app/src/main/res/drawable/ticket_background.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF" />
+    <corners android:radius="16dp" />
+    <stroke
+        android:width="2dp"
+        android:color="#4CAF50" /> <!-- Borde verde oscuro -->
+</shape>
