--- a/app/src/main/res/layout/activity_seleccionar_horario.xml
+++ b/app/src/main/res/layout/activity_seleccionar_horario.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/btnAtras"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SeleccionarHorario">
+    tools:context=".SeleccionarHorario"
+    >
 
     <ListView
         android:id="@+id/listaHorarios"
-        android:layout_width="280dp"
-        android:layout_height="401dp"
+        android:layout_width="316dp"
+        android:layout_height="437dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -48,7 +49,9 @@
         android:layout_marginTop="20dp"
         android:text="TextView"
         android:textColor="#000000"
-        android:textSize="14sp"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -57,13 +60,40 @@
         android:id="@+id/txtdoc"
         android:layout_width="405dp"
         android:layout_height="37dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="20dp"
         android:background="#4CAF50"
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:gravity="center"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/listaHorarios"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.062"
+        app:srcCompat="@mipmap/atras" />
+
+    <ImageButton
+        android:id="@+id/atras"
+        android:layout_width="20dp"
+        android:layout_height="22dp"
+        android:background="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.078"
+        app:srcCompat="@mipmap/doc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
