--- a/app/src/main/res/layout/activity_seleccionar_medico.xml
+++ b/app/src/main/res/layout/activity_seleccionar_medico.xml
@@ -2,11 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/btnAtras"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SeleccionarMedico"
-    android:padding="30dp">
+    android:background="#00FFFFFF"
+    android:backgroundTint="#00FFFFFF"
+    android:padding="30dp"
+    tools:context=".SeleccionarMedico">
 
     <ListView
         android:id="@+id/listaMedicos"
@@ -40,5 +42,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/medico" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@mipmap/atras" />
+
+    <ImageButton
+        android:id="@+id/atras"
+        android:layout_width="20dp"
+        android:layout_height="22dp"
+        android:background="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.021"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.018"
+        app:srcCompat="@mipmap/doc" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
